--- a/desafio-10/assets/styles/home.css
+++ b/desafio-10/assets/styles/home.css
@@ -37,7 +37,8 @@ figure.top1 figcaption {
 }
 
 .tops span,
-.single-filme span {
+.single-filme span,
+.single-recentes span {
   font: 400 .85rem "Lexend Deca", sans-serif;
   line-height: 17px;
   color: var(--white);
@@ -50,7 +51,8 @@ figure.top1 figcaption {
 }
 
 .tops figcaption,
-.single-filme figcaption {
+.single-filme figcaption,
+.single-recentes figcaption {
   width: 100%;
   height: 100%;
   font: 400 .8rem "Lexend Deca", sans-serif;
@@ -143,7 +145,8 @@ figure.top1 figcaption {
 
 .container-restante .title { margin-bottom: 40px; }
 
-.container-restante .title h3 {
+.container-restante .title h3,
+.noticias-recentes .container .title h3 {
   font: 400 1.5rem "Lexend Deca", sans-serif;
   line-height: 20px;
   color: var(--white);
@@ -161,3 +164,23 @@ figure.top1 figcaption {
 .single-filme { margin-bottom: 40px; }
 
 .single-filme:last-child { margin-bottom: 0; }
+
+.noticias-recentes { margin-top: 50px; }
+
+.container-recentes {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.single-recentes {
+  width: calc(100% / 3 - 35px);
+  margin: 0 35px 35px 0;
+  position: relative;
+}
+
+.single-recentes:nth-child(3),
+.single-recentes:nth-child(6) { margin: 0 0 35px 0; }
+
+.noticias-recentes .container .title {
+  margin-bottom: 45px;
+}
