--- a/desafio-10/assets/styles/home.css
+++ b/desafio-10/assets/styles/home.css
@@ -20,10 +20,7 @@
 
 .tops-do-dia { margin-top: 40px; }
 
-.tops-do-dia .container { 
-  display: flex;
-  /* flex-wrap: wrap; */
-}
+.tops-do-dia .container { display: flex; }
 
 figure.top1 figcaption {
   font: 400 1.5rem "Lexend Deca", sans-serif;
@@ -52,7 +49,8 @@ figure.top1 figcaption {
 
 .tops figcaption,
 .single-filme figcaption,
-.single-recentes figcaption {
+.single-recentes figcaption,
+.single-secao-animes figcaption {
   width: 100%;
   height: 100%;
   font: 400 .8rem "Lexend Deca", sans-serif;
