--- a/desafio-10/assets/styles/style.css
+++ b/desafio-10/assets/styles/style.css
@@ -54,23 +54,24 @@ footer .container .logo h2 {
   color: var(--purple-light);
 }
 
-.menu ul { display: flex; }
+.menu ul, .menu-error ul { display: flex; }
 
-.menu li { 
+.menu li, .menu-error li { 
   margin-right: 10px; 
   padding: 10px;
 }
 
-.menu li:nth-of-type(5) { margin-right: 84px; }
+.menu li:nth-of-type(5), .menu-error li:nth-of-type(5) { margin-right: 84px; }
 
-.menu li:last-of-type { 
+.menu li:nth-of-type(6) { 
   margin-right: 0; 
   border: 1px solid var(--purple-light);
   border-radius: 50px;
   padding: 10px 20px;
 }
 
-.menu li a {
+.menu li a, 
+.menu-error li a {
   font: 500 1rem "Inter", sans-serif;
   line-height: 19px;
   color: var(--white-200);
@@ -78,7 +79,7 @@ footer .container .logo h2 {
   transition: color .3s;
 }
 
-.menu li a:hover { color: var(--purple-light); }
+.menu li a:hover, .menu-error li a:hover { color: var(--purple-light); }
 
 footer { 
   margin-top: 50px;   
