--- a/desafio-10/assets/styles/home.css
+++ b/desafio-10/assets/styles/home.css
@@ -182,9 +182,86 @@ figure.top1 figcaption {
 }
 
 @media screen and (max-width: 966px) {
+  .tops-do-dia .container { flex-direction: column; }
+  .container-tops { display: flex; }
+
+  .container-tops .tops {
+    width: calc(100% / 2 - 20px);
+    margin: 0 20px 0 0;
+  }
+
+  .geral .container { flex-direction: column; }
+
+  .container-scroll { 
+    display: flex;
+    width: calc(100% - 20px); 
+    height: auto;
+    overflow-x: scroll;
+    overflow-y: hidden;
+  }
+
+  .single-scroll {
+    display: flex;
+    flex-direction: column;
+    padding: 20px;
+  }
+
+  .single-scroll:nth-child(1) { padding: 20px 20px 20px 0; }
+
+  .img-scroll {
+    width: 250px;
+    height: 151px;
+    margin-bottom: 20px;
+    margin-right: 0;
+  }
+
+  .container-restante { margin-top: 40px; }
+
+  .container-filmes {
+    display: flex;
+    flex-wrap: wrap;
+  }
+
+  .container-filmes .single-filme {
+    max-width: 100%;
+    width: calc(100% / 2 - 20px);
+    margin: 0 20px 40px 0;
+  }
+
   .single-recentes { width: calc(100% / 2 - 35px); }
 }
 
+@media screen and (max-width: 700px) {
+  .tops {
+    position: relative;
+    margin: 0 0 20px 0;
+  }
+
+  .container-tops .tops {
+    width: 100%;
+    height: 165px;
+    margin: 0 20px 20px 0;
+  }
+
+  .container-scroll { width: 100%; }
+}
+
 @media screen and (max-width: 640px) {
+  .top1 { height: 350px; }
+}
+
+@media screen and (max-width: 612px) {
+  .container-tops { flex-direction: column; }
+  .container-tops .tops { height: 100%; }
   .single-recentes { width: 100%; margin: 0 0 35px 0; }
+  .container-filmes .single-filme { width: 100%; margin: 0 0 40px 0; }
+}
+
+@media screen and (max-width: 375px) {
+  figure.top1 figcaption { font: 400 1.1rem "Lexend Deca", sans-serif; }
+  .container-tops .tops { height: 200px; }
+  .container-restante .title h3,
+  .noticias-recentes .container .title h3 {
+    font: 400 1.2rem "Lexend Deca", sans-serif;
+  }
 }
