--- a/desafio-10/assets/styles/style.css
+++ b/desafio-10/assets/styles/style.css
@@ -29,6 +29,8 @@ input { outline: none; }
 
 html { background: var(--dark); }
 
+input[type="checkbox"] { display: none; }
+
 img {
   width: 100%;
   height: 100%;
@@ -81,6 +83,45 @@ footer .container .logo h2 {
 
 .menu li a:hover, .menu-error li a:hover { color: var(--purple-light); }
 
+.span-btn-mobile {  
+  display: none;
+  background-color: var(--purple-light);
+  width: 29px;
+  height: 2px;
+  position: absolute; 
+  top: 55px;
+  right: 30px;
+  z-index: 999;
+  transition: transform .4s ease-in-out;
+}
+
+.span-btn-mobile::before,
+.span-btn-mobile::after {
+  content: "";
+  background-color: var(--purple-light);
+  width: 100%;
+  height: 100%;
+  display: block; 
+  position: absolute;
+  transition: .4s ease-in-out;
+}
+
+.span-btn-mobile::before { top: -10px; }
+
+.span-btn-mobile::after { bottom: -10px; }
+
+input[type="checkbox"]:checked ~ label .span-btn-mobile { transform: rotate(45deg); }
+    
+input[type="checkbox"]:checked ~ label .span-btn-mobile::before {
+  top: 0;
+  transform: rotate(90deg);
+}
+    
+input[type="checkbox"]:checked ~ label .span-btn-mobile::after {
+  bottom: 0;
+  transform: rotate(90deg); 
+}
+
 footer { 
   margin-top: 50px;   
   padding-bottom: 30px; 
@@ -103,5 +144,35 @@ footer .container .logo { margin-bottom: 16px; }
 }
 
 @media screen and (max-width: 976px) {
-  .menu { display: none; }
+  .menu { z-index: 1; }
+
+  .span-btn-mobile { display: block; }
+
+  .menu ul {
+    height: 100vh;
+    max-width: 70%;
+    width: 300px;
+    padding: 200px 20px;
+    display: block;
+    position: fixed;
+    top: 0;
+    right: -110%;   
+    margin: 0;
+    flex-direction: column;
+    text-align: center;
+    border-radius: 10px 0 0 10px;
+    background: var(--dark);  
+    box-shadow: 0 0 6px 0px var(--dark);
+    transition: .5s ease;
+  }
+
+  .menu ul li { 
+    width: 100%; 
+    padding: 10px 5px; 
+    margin: 29px 0 0 0; 
+  }
+
+  .menu ul li:last-of-type { padding: 15px; }
+
+  .menu ul.active { right: 0; }
 }
