--- a/desafio-13/assets/styles/style.css
+++ b/desafio-13/assets/styles/style.css
@@ -21,6 +21,7 @@ main { background: rgba(0, 0, 0, 0.4); }
 header { padding: 30px 20px; }
 
 body {
+  background-color: var(--black);
   background-image: url("../img/banner.png");
   background-repeat: no-repeat;
   background-size: cover;
@@ -34,7 +35,7 @@ body {
 
 .container, .left, .trailer { display: flex; }
 
-nav.container { justify-content: space-between; }
+nav.container { justify-content: space-between; align-items: center; }
 
 .riot { 
   padding-right: 60px;
@@ -64,10 +65,11 @@ nav.container { justify-content: space-between; }
   font-weight: 600;
   line-height: 30px;
   text-transform: uppercase;
-  padding: 20px 60px;
+  padding: 18px 60px;
   color: var(--black);
   background: var(--white-200);
   border: 2px solid var(--black);
+  clip-path: polygon(5% 0%, 100% 0%, 100% 100%, 0 100%, 0 20%);
 }
 
 .novo-episodio {
@@ -80,6 +82,7 @@ nav.container { justify-content: space-between; }
 .novo-episodio .container { padding: 0 20px 0 46px; }
 
 .novo {
+  height: 187px;
   padding: 20px 93px 20px 0;
   background: var(--white-200);
   border: 2px solid var(--black);
@@ -89,6 +92,7 @@ nav.container { justify-content: space-between; }
   display: flex;
   align-items: center;
   justify-content: center;
+  z-index: 1;
 }
 
 .img-novo-episodio, .ds-novo-episodio { position: relative; }
@@ -112,4 +116,62 @@ nav.container { justify-content: space-between; }
   font-weight: 400;
   line-height: 25px;
   color: var(--gray);
+}
+
+.bg-transparent {
+  width: 78%;
+  height: 111px;
+  background: var(--white-200);
+  border-radius: 0px 0px 0px 24px;
+  opacity: .2;
+  position: absolute;
+  bottom: 0;
+  right: 0;
+}
+
+@media screen and (max-width: 626px) {
+  body { background-image: url("../img/banner-responsivo.jpg"); }
+
+  .riot { 
+    padding-right: 30px;
+    margin-right: 30px;
+  }
+
+  .novo {
+    flex-direction: column;
+    text-align: center;
+    padding: 20px 20px 150px 20px;
+    margin: auto;
+    width: 400px;
+    height: 300px;
+    border: 5px solid var(--black);
+  }
+
+  .novo-episodio {
+    margin-top: 200px;
+    position: relative; 
+  }
+  
+  .img-novo-episodio, .ds-novo-episodio { position: initial; }
+  .img-novo-episodio { margin-bottom: 20px; }
+  .novo-episodio .container { padding: 0 20px; }
+  .bg-transparent { display: none; }
+}
+
+@media screen and (max-width: 424px) {
+  .riot { width: 80px; padding-right: 100px; }
+  .logo { width: 20px; }
+  .netflix img { width: 120px; }
+
+  .btn-trailer a {
+    font-size: 1rem;
+    padding: 16px 50px;
+  }
+}
+
+@media screen and (max-width: 365px) {
+  .riot { padding-right: 90px; margin-right: 20px; }
+  .riot img { width: 70px;  height: 100%; }
+  .logo img { width: 36px; }
+  .netflix img { width: 100px; }
 }
