--- a/desafio-16/assets/styles/style.css
+++ b/desafio-16/assets/styles/style.css
@@ -13,3 +13,182 @@
   --gray-200: #404040;
   --black-light: #161212;
 }
+
+html { scroll-behavior: smooth; }
+
+ol, ul { list-style: none; }
+
+a { text-decoration: none; }
+
+header, .intro, #doacao { background: var(--pink); }
+
+.container {
+  max-width: 1300px;
+  margin: auto;
+  padding: 0 20px;
+}
+
+header .container, .logo, .menu ul { display: flex; }
+
+header .container, .logo { align-items: center; }
+
+header .container { padding: 20px; justify-content: space-between; }
+
+.logo figcaption {
+  font-size: 1.5rem;
+  font-weight: 500;
+  line-height: 36px;
+  color: var(--black-light);
+  margin-left: 16px;
+}
+
+.menu ul li { margin-right: 51px; }
+
+.menu ul li:last-of-type { margin-right: 0; }
+
+.menu ul li a {
+  font-weight: 500;
+  line-height: 24px;
+  color: var(--black-light);
+}
+
+.intro .container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between	;
+  padding: 90px 20px 140px 20px;
+}
+
+.ds-intro h1 {
+  font-size: 3rem;
+  font-weight: 600;
+  line-height: 52px;
+  color: var(--black-light);
+  margin-bottom: 24px;
+}
+
+.ds-intro h1 span { display: block; }
+
+.ds-intro p {
+  max-width: 444px;
+  font-weight: 500;
+  line-height: 24px;
+  color: var(--gray-200);
+  margin-bottom: 40px;
+}
+
+.ds-intro a {
+  width: 250px;
+  font-weight: 600;
+  line-height: 24px;
+  padding: 12px 32px;
+  color: var(--white);
+  display: flex;
+  align-items: center;
+  background: var(--red);
+  border-radius: 8px;
+}
+
+.ds-intro a img { margin-right: 10px; }
+
+#acessorios { padding: 48px 0 106px 0; background: var(--white); }
+
+#acessorios .container .title { text-align: center; margin-bottom: 38px; }
+
+#acessorios .container .title h2 {
+  font-size: 3rem;
+  font-weight: 600;
+  line-height: 72px;
+  color: var(--black-light);
+  margin-bottom: 12px;
+}
+
+#acessorios .container .title p {
+  max-width: 477px;
+  font-weight: 400;
+  line-height: 24px;
+  color: var(--gray-200);
+  margin: auto;
+}
+
+.container-acessorios { 
+  display: flex; 
+  justify-content: space-between;
+  flex-wrap: wrap; 
+}
+
+.single-acessorios { width: 200px; text-align: center; }
+
+.single-acessorios h3 {
+  font-size: 1.25rem;
+  font-weight: 500;
+  line-height: 30px;
+  color: var(--black-light);
+}
+
+.single-acessorios p {
+  max-width: 198px;
+  font-weight: 500;
+  line-height: 24px;
+  color: var(--gray);
+  margin: 12px auto 0 auto;
+}
+
+#doacao { padding: 90px 0 70px 0; }
+
+#doacao .container { display: flex; align-items: center; }
+
+.img-doacao { margin-right: 224px; }
+
+.ds-doacao h2 {
+  max-width: 488px;
+  font-size: 3rem;
+  font-weight: 600;
+  line-height: 52px;
+  color: var(--black-light);
+  margin-bottom: 24px;
+}
+
+.ds-doacao p {
+  max-width: 457px;
+  font-weight: 500;
+  line-height: 24px;
+  color: var(--black-light);
+  margin-bottom: 32px;
+}
+
+.ds-doacao a {
+  width: 250px;
+  font-weight: 600;
+  line-height: 24px;
+  padding: 14px 32px;
+  display: flex;
+  align-items: center;
+  color: var(--white);
+  background: var(--red);
+  border-radius: 8px;
+}
+
+.ds-doacao a img { margin-right: 10px; }
+
+#contato { padding: 49px 0; background: var(--white); }
+
+#contato .container,
+.redes-sociais {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.single-redes-sociais {
+  width: 40px;
+  height: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: #DA253426;
+  border-radius: 50%;
+  margin-right: 43px;
+}
+
+.single-redes-sociais:last-child { margin-right: 0; }
